--- a/global.css
+++ b/global.css
@@ -27,6 +27,7 @@ body {
 a {
 	color: black;
 	text-decoration: none;
+	font-weight: bold;
 }
 
 .warmth {
@@ -79,4 +80,19 @@ li {
 .creators,
 h3 {
 	color: var(--ocean);
+}
+
+canvas {
+	animation: fadeIn ease 3s;
+	animation-iteration-count: 1;
+	animation-fill-mode: forwards;
+}
+
+@keyframes fadeIn {
+	0% {
+		opacity: 0;
+	}
+	100% {
+		opacity: 1;
+	}
 }
