--- a/global.css
+++ b/global.css
@@ -86,6 +86,9 @@ canvas {
 	animation: fadeIn ease 3s;
 	animation-iteration-count: 1;
 	animation-fill-mode: forwards;
+	border-radius: 10px;
+
+	box-shadow: 0 0 0 2px black;
 }
 
 @keyframes fadeIn {
