--- a/assets/styles/canvas.css
+++ b/assets/styles/canvas.css
@@ -1,7 +1,6 @@
 canvas {
 	border-radius: 10px;
 	box-shadow: 0 0 0 2px black;
-
-	/* margin-top: 10px; */
 	width: 80vw;
+	height: calc(80vw * 9 / 16);
 }
