--- a/assets/styles/queries.css
+++ b/assets/styles/queries.css
@@ -4,7 +4,6 @@
 		display: flex;
 		flex-direction: column;
 		justify-content: space-between;
-		height: 50vh;
 	}
 
 	nav {
@@ -17,6 +16,11 @@
 		padding: 10px;
 		border-radius: 5px;
 		width: 80vw;
+	}
+
+	canvas {
+		box-shadow: none;
+		display: none;
 	}
 }
 
@@ -32,5 +36,10 @@
 		padding: 10px;
 		border-radius: 5px;
 		width: 80vw;
+	}
+
+	canvas {
+		box-shadow: none;
+		display: none;
 	}
 }
