--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -29,6 +29,14 @@ body {
 	align-items: center;
 }
 
+nav {
+	display: flex;
+	width: 900px;
+	justify-content: space-evenly;
+	height: 70px;
+	align-items: center;
+}
+
 h1 {
 	display: flex;
 	width: 200px;
@@ -36,13 +44,17 @@ h1 {
 	color: var(--dusk);
 }
 
-.creators,
-h3 {
-	color: var(--ocean);
+h2 {
+	color: var(--warmth);
 }
 
-div {
-	color: var(--warmth);
+.noBackground {
+	background-color: var(--beige);
+}
+
+h3 {
+	color: var(--ocean);
+	margin: 0px 0px 10px 0px;
 }
 
 a {
@@ -58,28 +70,12 @@ a:hover {
 
 .warmth {
 	color: var(--warmth);
-	font-weight: bold;
-}
-
-nav {
-	display: flex;
-	width: 900px;
-	justify-content: space-evenly;
-	height: 70px;
-	align-items: center;
-}
-
-/* Articles. */
-
-h2 {
-	margin-bottom: 10px;
-	color: var(--warmth);
 }
 
 article {
 	background-color: white;
-	margin: 20px;
-	padding: 20px;
+	margin: 20px 0px 20px 0px;
+	padding: 10px 10px 10px 10px;
 	border-radius: 5px;
 	width: 900px;
 }
@@ -87,4 +83,5 @@ article {
 ul,
 li {
 	list-style-type: none;
+	margin: 10px 0px 0px 0px;
 }
